fix something in chatbox

--- a/navigation/admin.html
+++ b/navigation/admin.html
@@ -40,9 +40,9 @@
                 <!-- Thanh dieu huong -->
                 <div class="header__inner__navigation">
                     <ul>
-                        <li><a class="header__inner__navigation__sevice" href="./index.html"><span>TRANG CHỦ</span></a>
+                        <li><a class="header__inner__navigation__sevice" href="../index.html"><span>TRANG CHỦ</span></a>
                         </li>
-                        <li><a class="header__inner__navigation__sevice" href="./navigation/forum.html">DIỄN ĐÀN</a>
+                        <li><a class="header__inner__navigation__sevice" href="./forum.html">DIỄN ĐÀN</a>
                         </li>
                         <li>
                             <div class="dropdown">
@@ -50,14 +50,14 @@
                                     DỊCH VỤ<m><i class='bx bxs-right-arrow'></i></m>
                                 </a>
                                 <div class="containt">
-                                    <a href="./navigation/card.html">THẺ HỘI VIÊN</a>
-                                    <a href="./navigation/train.html">HUẤN LUYỆN VIÊN</a>
-                                    <a href="./navigation/shop.html">CỬA HÀNG WHEY</a>
-                                    <a href="./navigation/chatbox.html">CHAT ONLINE</a>
+                                    <a href="./card.html">THẺ HỘI VIÊN</a>
+                                    <a href="./train.html">HUẤN LUYỆN VIÊN</a>
+                                    <a href="./shop.html">CỬA HÀNG WHEY</a>
+                                    <a href="./chatbox.html">CHAT ONLINE</a>
                                 </div>
                             </div>
                         </li>
-                        <li><a class="header__inner__navigation__sevice" href="./navigation/promotion.html">KHUYẾN
+                        <li><a class="header__inner__navigation__sevice" href="./promotion.html">KHUYẾN
                                 MÃI</a></li>
                     </ul>
                 </div>
@@ -176,12 +176,20 @@
                     </div>
                 </div>
                 <div class="container__show">
+
                     <!-- MESSAGE -->
-                    <div class="container__show__message"></div>
+                    <div class="container__show__message">
+                        <div class="container__show__message__title">
+                            <h1>TIN NHẮN</h1>
+                        </div>
+
+                    </div>
+
                     <!-- ACCOUNT -->
                     <div class="container__show__account"></div>
+
                     <!-- CART -->
-                    <div class="container__show__cart">
+                    <!-- <div class="container__show__cart">
                         <div class="container__show__cart__add">
                             <h1>QUẢN LÍ THẺ THÀNH VIÊN</h1>
                             <button class="container__show__cart__add__btn">Thêm thẻ thành viên</button>
@@ -227,7 +235,8 @@
                             <span class="save__message"></span>
                             <button class="save-btn">Lưu</button>
                         </div>
-                    </div>
+                    </div> -->
+
                     <!-- SHOP -->
                     <div class="container__show__shop"></div>
 
