--- a/navigation/chatbox.html
+++ b/navigation/chatbox.html
@@ -170,6 +170,7 @@
     <!-- overlay -->
     <div class="nen_mo"></div>
     <script src="../navigation_javascript/menuv2.js"></script>
+    <!-- <script src="../navigation_javascript/chatbox.js"></script> -->
 </body>
 
 </html>
