link chatbot to admin done

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             <a class="account-avt account" href="#" onclick="yourFunction(event)">
                             </a>
                             <div class="status__account">
-                                <a class="status" href="#">
+                                <a class="loginstatus status" href="#">
                                     ĐĂNG NHẬP
                                 </a>
                                 <a class="status" href="#">
@@ -86,7 +86,7 @@
                                 <a class="status" href="#">
                                     LỊCH TẬP
                                 </a>
-                                <a class="status" href="#">
+                                <a class="logoutstatus status" href="">
                                     ĐĂNG XUẤT
                                 </a>
                             </div>
