--- a/navigation/admin.html
+++ b/navigation/admin.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="../css/keyframes.css">
     <link rel="stylesheet" href="../css/base.css">
     <link rel="stylesheet" href="../css/keyframes.css">
+    <link rel="stylesheet" href="../navigation_css/chatbox.css">
     <link rel="stylesheet" href="../navigation_css/admin.css">
     <!-- <link rel="stylesheet" href="./navigation_css/promotion.css"> -->
     <title>GYMZ - Thể hình giới trẻ</title>
@@ -179,8 +180,40 @@
 
                     <!-- MESSAGE -->
                     <div class="container__show__message">
-                        <div class="container__show__message__title">
-                            <h1>TIN NHẮN</h1>
+                        <div class="container__show__message__box">
+                            <div class="chatbox">
+                                <div class="chatbox__head">
+                                    <h1 class="chatbox__head__title">Chatbox</h1>
+                                    <div class="chatbox__head__active">
+                                        <span class="chatbox__head__active__text">Hoạt động</span>
+                                    </div>
+                                </div>
+                                <div class="chatbox__message">
+                                    <ul class="chatbox__message__list">
+                                        <li class="chatbox__message__item chatbox__message__item__left">
+                                            <!-- <span class="chatbox__message__item__text">
+                                                Em chào anh/chị Em có thể giúp gì được anh chị ạ!
+                                            </span> -->
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="chatbox__bottom">
+                                    <div class="chatbox__bottom__link-social">
+                                        <div class="chatbox__bottom__link-social__mess">
+                                            <a href="https://www.messenger.com/t/172967089240726/"
+                                                class="chatbox__bottom__link-social__mess">
+                                                <i class="fa-brands fa-facebook-messenger"></i>
+                                                <span>chat messenger</span>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="chatbox__bottom__input">
+                                        <input type="text">
+                                        <i class="fa-regular fa-paper-plane"></i>
+                                    </div>
+                                </div>
+
+                            </div>
                         </div>
 
                     </div>
