--- a/navigation/chatbox.html
+++ b/navigation/chatbox.html
@@ -143,7 +143,7 @@
                     <ul class="chatbox__message__list">
                         <li class="chatbox__message__item chatbox__message__item__left">
                             <span class="chatbox__message__item__text">
-                                Em chào mình ạ, mình cho em xin thông tin đặt hàng để em gửi đơn cho mình nhé ạ!1
+                                Em chào anh/chị Em có thể giúp gì được anh chị ạ!
                             </span>
                         </li>
                     </ul>
