add infomation account 1%

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                 <a class="loginstatus status" href="#">
                                     ĐĂNG NHẬP
                                 </a>
-                                <a class="status" href="#">
+                                <a class="status" href="./navigation/information_account.html">
                                     THÔNG TIN TK
                                 </a>
                                 <a class="status" href="#">
