--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                         <p class="home__about__head__text">TÌM LẠI NĂNG LƯỢNG CỦA BẠN</p>
                     </div>
                     <h1 class="home__about__title">
-                        NÂNG CAO SỨC KHỎE VÀ VÓC DÁNG CỦA BẠN.
+                        TẠO NỀN TẢNG CHO MÔI TRƯỜNG TẬP LUYỆN HIỆU QUẢ
                     </h1>
                     <p class="home__about__text">
                         CLOSE-AIGYM dùng toàn bộ nỗ lực để giúp bạn yêu cơ thể mình hơn, đều đặn mỗi ngày.
