--- a/navigation/admin.html
+++ b/navigation/admin.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="../css/keyframes.css">
     <link rel="stylesheet" href="../navigation_css/chatbox.css">
     <link rel="stylesheet" href="../navigation_css/admin.css">
+    <link rel="stylesheet" href="../navigation_css/toast.css">
     <!-- <link rel="stylesheet" href="./navigation_css/promotion.css"> -->
     <title>GYMZ - Thể hình giới trẻ</title>
 
@@ -154,7 +155,7 @@
                                 QL tài khoản
                             </span>
                         </li>
-                        <li id="QLCart" class="container__bar__item">
+                        <li id="QLCard" class="container__bar__item">
                             <i class="fa-solid fa-address-card"></i>
                             <span class="container__bar__item__text">
                                 QL thẻ thành viên
@@ -220,7 +221,9 @@
                     <div class="container__show__account">
                         <div class="container__show__add container__show__account__add">
                             <h1>QUẢN LÍ TÀI KHOẢN</h1>
-                            <button id="add-account" class="container__show__add__btn container__show__account__add__btn" onclick="addAccount()">Thêm tài
+                            <button id="add-account"
+                                class="container__show__add__btn container__show__account__add__btn"
+                                onclick="addAccount()">Thêm tài
                                 khoản</button>
                         </div>
                         <div class="container__show__head">
@@ -253,16 +256,17 @@
                         </div>
                     </div>
 
-                    <!-- CART -->
-                    <div class="container__show container__show__cart">
-                        <div class="container__show__add container__show__cart__add">
+                    <!-- CARD -->
+                    <div class="container__show container__show__card">
+                        <div class="container__show__add container__show__card__add">
                             <h1>QUẢN LÍ THẺ THÀNH VIÊN</h1>
-                            <button  id="add-cart"  class="container__show__add__btn container__show__cart__add__btn" onclick="addCart()">Thêm thẻ thành
+                            <button id="add-card" class="container__show__add__btn container__show__card__add__btn"
+                                onclick="addCard()">Thêm thẻ thành
                                 viên</button>
                         </div>
-                        <div class="container__show__head container__show__cart__head">
-                            <div class="container__show__head__input__box container__show__cart__head__input__box">
-                                <input class="show__input__id" type="text" oninput="findByIDCart(this)"
+                        <div class="container__show__head container__show__card__head">
+                            <div class="container__show__head__input__box container__show__card__head__input__box">
+                                <input class="show__input__id" type="text" oninput="findByIDCard(this)"
                                     placeholder="Nhập mã thẻ hoặc tên khách hàng">
                                 <div class="show__find__id__box">
                                 </div>
@@ -271,19 +275,19 @@
                             <div class="head-end">
                                 <select class="show__input__package" id="packet" name="packet">
                                     <option value="" disabled selected>Loại thành viên</option>
-                                    <option value="NORMAL">NORMAL</option>
-                                    <option value="PRO">PRO</option>
-                                    <option value="PROMAX">PROMAX</option>
+                                    <option value="NORMAL">BEGINNER</option>
+                                    <option value="PRO">BASIC</option>
+                                    <option value="PROMAX">ADVENCE</option>
                                 </select>
                                 <input id="input-date-start" class="show__input__date" type="text"
                                     placeholder="Ngày gia nhập">
                                 <input id="input-date-end" class="show__input__date" type="text"
                                     placeholder="Ngày hết hạn">
-                                <button class="container__show__cart__find__btn">Tìm kiếm</button>
+                                <button class="container__show__card__find__btn">Tìm kiếm</button>
                             </div>
                         </div>
                         <!-- <i class="remove-icon fa-solid fa-trash"></i> -->
-                        <div class="container__show__content container__show__cart__content">
+                        <div class="container__show__content container__show__card__content">
                             <table class="table__show table__show__main">
                                 <tr class="tr__show">
                                     <th class="th__show">Mã thẻ</th>
@@ -299,7 +303,7 @@
                         </div>
                         <div class="save__box">
                             <span class="save__message"></span>
-                            <button class="save-btn" onclick="saveCart()">Lưu</button>
+                            <button class="save-btn" onclick="saveCard()">Lưu</button>
                         </div>
                     </div>
 
@@ -307,7 +311,9 @@
                     <div class="container__show__calendar">
                         <div class="container__show__add container__show__calendar__add">
                             <h1>QUẢN LÍ LỊCH TẬP</h1>
-                            <button id="add-calendar"  class="container__show__add__btn container__show__calendar__add__btn" onclick="addCalendar()">Thêm lịch tập</button>
+                            <button id="add-calendar"
+                                class="container__show__add__btn container__show__calendar__add__btn"
+                                onclick="addCalendar()">Thêm lịch tập</button>
                         </div>
                         <div class="container__show__head container__show__calendar__head">
                             <div class="container__show__head__input__box container__show__calendar__head__input__box">
@@ -318,7 +324,8 @@
                                 </table>
                             </div>
                             <div class="head-end">
-                                <button class="container__show__find__btn container__show__calendar__find__btn">Tìm kiếm</button>
+                                <button class="container__show__find__btn container__show__calendar__find__btn">Tìm
+                                    kiếm</button>
                             </div>
                         </div>
                         <!-- <i class="remove-icon fa-solid fa-trash"></i> -->
@@ -327,7 +334,7 @@
                                 <tr class="tr__show">
                                     <th class="th__show">Mã thẻ</th>
                                     <th class="th__show">Tên Hội Viên</th>
-                                    <th class="th__show">Ngày tập</th>
+                                    <th class="th__show">Ngày tập trong tuần</th>
                                     <th class="th__show">Thời gian bắt đầu</th>
                                     <th class="th__show">Thời gian kết thúc</th>
                                     <th class="th__show">Bài tập</th>
@@ -347,22 +354,22 @@
             <!-- </div> -->
 
             <!-- success -->
-            <div id="toast"></div>
             <div>
                 <!-- <div onclick="showSuccessToast();" class="btn btn--sucess">Show succes toast</div>
-                <div onclick="showErrorToast();" class="btn btn--danger">Show error toast</div> -->
+                    <div onclick="showErrorToast();" class="btn btn--danger">Show error toast</div> -->
             </div>
         </div>
 
     </div>
 
+    <div id="toast"></div>
     <!-- overlay -->
     <div class="modal">
         <div class="modal-overlay">
 
         </div>
         <div class="modal__body">
-            <div class="add-cart">
+            <div class="add-card">
 
             </div>
         </div>
