--- a/navigation/informationItem.html
+++ b/navigation/informationItem.html
@@ -532,7 +532,7 @@
     </div>
 
 
-    <script src="./index.js"></script>
+    <!-- <script src="./index.js"></script> -->
     <script src="../navigation_javascript/menuv2.js"></script>
     <script src="../navigation_javascript/informationItem.js" type="text/babel"></script>
 
