--- a/navigation/shop.html
+++ b/navigation/shop.html
@@ -418,7 +418,7 @@
     </div>
     <!-- overlay -->
     <div class="nen_mo"></div>
-    <script src="./index.js"></script>
+    <!-- <script src="../index.js"></script> -->
     <script src="../navigation_javascript/menuv2.js"></script>
     <script  src="../navigation_javascript/shop.js" type="text/babel"></script>
 </body>
